# EGoT-DCS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile.buster  EGoT-DCS-CTA2045.cbp  Makefile  README.md  cmake_install.cmake
certs/: RootCA.crt  RootCA.key  RootCA.srl  localhost.crt  localhost.csr  localhost.key
certs/beast_preconfig_certs/: GeotrustGlobalCA.pem  localhost.crt
client_test/: CMakeLists.txt  simple_client.cpp
msg_logs/: dtm_messages_testing.txt  dtm_messages_testing.xml
msg_logs/gprof_sample2_logs/: t2_acDPb_flags.txt  test2_PTb_flags.txt  test2_blQflags.txt
msg_logs/profiling_logs/: Baseline11-42.txt  PClog.sh  Test_11-46.txt  Tlog11:29.txt  Tlog11:34.txt  Tlog11:37.txt  Tlog11:40.txt
reference/cea2045/cea2045/communicationport/: CEA2045SerialPort.cpp  CEA2045SerialPort.h  ICommunicationPort.h
reference/cea2045/cea2045/device/: CEA2045Device.cpp  CEA2045Device.h  CEA2045DeviceUCM.cpp  CEA2045DeviceUCM.h  DeviceFactory.cpp  DeviceFactory.h  ICEA2045Device.cpp  ICEA2045Device.h  ICEA2045DeviceUCM.h  MessageHandler.cpp  MessageHandler.h
reference/cea2045/cea2045/device/message/: Basic.cpp  Basic.h  Intermediate.cpp  Intermediate.h  Message.cpp  Message.h  QueryMaxPayload.cpp  QueryMaxPayload.h  QueryMessageTypeSupported.cpp  QueryMessageTypeSupported.h  SetEnergyPrice.cpp  SetEnergyPrice.h  SetSetpoints.cpp  SetSetpoints.h  SetTemperatureOffset.cpp  SetTemperatureOffset.h  StartCycling.cpp  StartCycling.h  TerminateCycling.cpp  TerminateCycling.h
reference/cea2045/cea2045/linklayer/: ILinkLayerComm.h  ILinkLayerCommRecv.cpp  ILinkLayerCommRecv.h  ILinkLayerCommSend.h  LinkLayerCommImpl.cpp  LinkLayerCommImpl.h  ReceiveBuffer.cpp  ReceiveBuffer.h
reference/cea2045/cea2045/message/: CEA2045Message.h  CEA2045MessageBasic.h  CEA2045MessageCommodityResponse.h  CEA2045MessageDataLink.h  CEA2045MessageDeviceInfoResponse.h  CEA2045MessageGetPresentTemperatureResponse.h  CEA2045MessageGetSetpointsResponse.h  CEA2045MessageGetTemperatureOffsetResponse.h  CEA2045MessageGetUTCTimeResponse.h  CEA2045MessageIntermediate.h  CEA2045MessageIntermediateResponse.h  CEA2045MessageMacros.h  CEA2045MessageSetEnergyPriceRequest.h  CEA2045MessageSetSetpointsRequest.h  CEA2045MessageSetTemperatureOffsetRequest.h  CEA2045MessageStartCyclingRequest.h  CEA2045MessageTerminateCyclingRequest.h  CEA2045MessageTypeSupported.h  ConvertEnums.cpp  ConvertEnums.h
reference/cea2045/cea2045/processmessage/: IProcessMessage.h  ISGD.h  IUCM.h  ProcessMessageSGD.cpp  ProcessMessageSGD.h  ProcessMessageUCM.cpp  ProcessMessageUCM.h
reference/cea2045/cea2045/util/: CEA2045Time.cpp  CEA2045Time.h  Checksum.cpp  Checksum.h  MSTimer.cpp  MSTimer.h
reference/sample2/sample2/: UCMImpl.h  main.cpp
src/: CMakeLists.txt  CTA2045Translator.cpp  CTA2045Translator.h  DCM.cpp  DCMImpl.cpp  DCMImpl.h  Makefile  UCMImpl.cpp  UCMImpl.h  cmake_install.cmake  main.cpp
tests/: CEA2045DeviceMock.h  CEA2045SerialPortMock.h  CMakeLists.txt  CTA2045TranslatorDERFunctionsTest.cpp  CTA2045TranslatorTest.cpp  DCMImplMock.h
xml_writer/: CMakeCache.txt  CMakeLists.txt  Makefile  abstract_command.cpp  abstract_command.h  announce_xml.cpp  announce_xml.h  announcer  cmake_install.cmake  main.cpp
xml_writer/https/: CMakeLists.txt  https_client.cpp
xml_writer/https/include/https/: https_client.hpp
xml_writer/https_simple/: CMakeLists.txt  simple_client.cpp
xml_writer/https_simple/include/https/: https_client.hpp
