if(USE_DEBUG)
    MESSAGE(STATUS "TEST: USING USE_DEBUG flag")
	add_compile_definitions(USE_DEBUG)
endif()

# add_subdirectory(src)
include_directories(${EGoT-DCS-CTA2045}/src)
add_executable(all-tests main.cpp CTA2045TranslatorTest.cpp CTA2045TranslatorDERFunctionsTest.cpp)
target_link_libraries(all-tests gtest gmock gtest_main cea2045 Boost::boost src)
add_test(all-tests all-tests)